force-app/main/default/objects/Account/fields/AcademicHealth__c.field-meta.xml
<CustomField>
    <fullName>AcademicHealth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Academic Health</label>
    <type>Checkbox</type>
</CustomField>