force-app/main/default/objects/Account/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>HYPERLINK( &quot;/&quot;&amp;Id ,Name)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>