force-app/main/default/objects/Account/fields/ActionReason__c.field-meta.xml
<CustomField>
    <fullName>ActionReason__c</fullName>
    <label>Action Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>