force-app/main/default/objects/Account/fields/ActiveFaculties__c.field-meta.xml
<CustomField>
    <fullName>ActiveFaculties__c</fullName>
    <label>Active Faculties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>